# ContextGuard

./: .gitignore  README.md  example_usage.py  pyproject.toml
contextguard/: __init__.py  guard.py  patterns.py  wrappers.py
tests/: test_manual.py  test_unit.py
