[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextguard"
version = "0.1.0"
description = "A middleware layer to prevent accidental secret leaks to LLMs."
readme = "README.md"
authors = [
    { name = "User" }
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
all = [
    "anthropic>=0.19.0",
    "google-genai>=0.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["contextguard"]
